<resources>
    <string name="app_name">Culinary Assistant</string>
    <string name="title_activity_account_info">AccountInfo</string>
    <string name="nt">nt</string>
    <string name="yt">yt</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="stitch_client_app_id">recipebackend-wgtcl</string>
    <string name="my_app_id">recipebackend-wgtcl</string>
    <string name="title_activity_mainmenu">mainmenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="search_hint">Search for Recipes</string>

    <string name="menu_local">My Recipes</string>
    <string name="menu_meal_planner">Meal Planner</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_shopping_list">Shopping List</string>
    <string name="menu_debugMenu">Debug</string>


    <string name="servingFormat">Serves %1$s people</string>
    <string name="timingFormat">%1$s minutes</string>
    <string name="tempFormat">%1$s%2$s%3$s</string>

    <string name="notesFormat">%1$s%2$s%3$s</string>
    <string name="searchQueryFormat">/.*%1$s.*/</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">culinaryassistant</string>
    <string name="channel_description">culinaryassistant</string>
</resources>
