<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_local"
            android:icon="@drawable/ic_circle_fill"
            android:title="@string/menu_local"
            android:onClick="loadNavMenu"
            tools:targetApi="o" />
        <item
            android:id="@+id/nav_meal_planner"
            android:icon="@drawable/ic_circle_fill"
            android:title="@string/menu_meal_planner"
            android:onClick="loadNavMenu" />

        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_circle_fill"
            android:title="@string/menu_shopping_list"
            android:onClick="loadNavMenu"
            />

    </group>
</menu>